<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color"
    tools:context=".mainFragment">

    <!-- Процентные гайдлайны для адаптивности -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <!-- Верхняя панель с кнопками -->
    <ImageButton
        android:id="@+id/options_button"
        android:layout_width="@dimen/button_size_medium"
        android:layout_height="@dimen/button_size_medium"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:background="@drawable/ic_1options"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size_medium"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@drawable/shape_1search"
        app:layout_constraintEnd_toStartOf="@id/researcher_button"
        app:layout_constraintStart_toEndOf="@id/options_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/address_example"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@id/search"
        app:layout_constraintEnd_toEndOf="@id/search"
        app:layout_constraintStart_toStartOf="@id/search"
        app:layout_constraintTop_toTopOf="@id/search" />

    <ImageButton
        android:id="@+id/researcher_button"
        android:layout_width="@dimen/button_size_medium"
        android:layout_height="@dimen/button_size_medium"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:background="@drawable/ic_researcher2"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Основной контент с CoordinatorLayout -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/default_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/options_button">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <!-- Горизонтальный скролл карточек -->
            <HorizontalScrollView
                android:id="@+id/horizontalScroll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@android:color/transparent"
                android:scrollbarSize="0dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:id="@+id/cardsContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/margin_medium">

                    <androidx.cardview.widget.CardView
                        style="@style/cardViewStyle"
                        android:layout_marginStart="@dimen/margin_medium">

                        <ImageView
                            android:id="@+id/imageView"
                            style="@style/ImageStyle"
                            android:src="@drawable/png_1card" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                        <ImageView
                            android:id="@+id/imageView1"
                            style="@style/ImageStyle"
                            android:src="@drawable/png_2card" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                        <ImageView
                            android:id="@+id/imageView2"
                            style="@style/ImageStyle"
                            android:src="@drawable/png_3card" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                        <ImageView
                            android:id="@+id/imageView3"
                            style="@style/ImageStyle"
                            android:src="@drawable/png_4card" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                        <ImageView
                            android:id="@+id/imageView4"
                            style="@style/ImageStyle"
                            android:src="@drawable/png_5card" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                        <ImageView
                            android:id="@+id/imageView5"
                            style="@style/ImageStyle"
                            android:src="@drawable/png_6card" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                        <ImageView
                            android:id="@+id/imageView6"
                            style="@style/ImageStyle"
                            android:src="@drawable/png_7card" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView style="@style/cardViewStyle">

                        <ImageView
                            android:id="@+id/imageView7"
                            style="@style/ImageStyle"
                            android:src="@drawable/png_8card" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

            <!-- Разделитель -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/scroll_view_height"
                android:background="@drawable/shape_main_scroll_menu" />

            <!-- Горизонтальное меню категорий -->
            <HorizontalScrollView
                android:id="@+id/pinnedMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/default_color"
                android:scrollbarSize="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/margin_small"
                    android:paddingEnd="@dimen/margin_medium"
                    android:paddingBottom="@dimen/margin_small">

                    <com.google.android.material.button.MaterialButton
                        style="@style/CategoryButtonStyle"
                        android:text="@string/cart_order"
                        app:backgroundTint="@color/white" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/CategoryButtonStyle"
                        android:text="@string/new_and_sales" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/CategoryButtonStyle"
                        android:text="@string/sushi_menu" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/CategoryButtonStyle"
                        android:text="@string/main_menu" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/CategoryButtonStyle"
                        android:text="@string/light_food" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/CategoryButtonStyle"
                        android:text="@string/kids_menu" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/CategoryButtonStyle"
                        android:text="@string/desserts_drinks" />

                </LinearLayout>
            </HorizontalScrollView>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Основной скроллируемый контент -->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/mainScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/default_color"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="@dimen/margin_medium" />

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>